lab_envoy_h3/envoy.yaml
static_resources:
  listeners:
  - name: h3
    address: { socket_address: { address: 0.0.0.0, port_value: 4439, protocol: UDP } }
    udp_listener_config:
      quic_options: {}
      downstream_socket_config: { max_rx_datagram_size: 1452 }
    reuse_port: true
    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.quic
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
          downstream_tls_context:
            common_tls_context:
              tls_certificates:
              - certificate_chain: { filename: /certs/lab.crt }
                private_key: { filename: /certs/lab.key }
              alpn_protocols: [ "h3" ]
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP3
          stat_prefix: h3
          http3_protocol_options: {}
          route_config:
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes: [ { match: { prefix: "/" }, route: { cluster: backend } } ]
          http_filters:
          - name: envoy.filters.http.router
            typed_config: { "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router }
  clusters:
  - name: backend
    type: STRICT_DNS
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint: { address: { socket_address: { address: tap_ev, port_value: 9099 } } }
